# blackkite

./: .env.test  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  docker-compose.yml  entrypoint.sh  params.py  pyproject.toml  query.py  requirements.txt  vectorize.py
.github/: CODEOWNERS
src/: cli.py  commands.py  ingestion_service.py  processing_pipeline.py  processors.py  vector_db_dao.py
utils/: move_md.sh
