[tool.poetry]
name = "blackkite"
version = "0.1.0"
description = "Pipeline for RAG"
authors = ["Kristian Garza <kj.garza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "*"
langchain = "^0.0.231"
lxml = "*"
pymongo = "*"
requests = "*"
bs4 = "*"
openai = "*"
tiktoken = "*"
click = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
