[tool.poetry]
name = "blackkite"
version = "0.1.0"
description = "Pipeline for RAG"
authors = ["Kristian Garza <kj.garza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "*"
langchain = "^0.2.1"
lxml = "*"
pymongo = "*"
requests = "*"
bs4 = "*"
openai = "*"
tiktoken = "*"
click = "*"
pydantic = "^2.3"
pydantic-settings = "^2.2.1"
unstructured = "*"
markdown = "*"
dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
